feat: added ollama chat api, need to update so the api can read history from db
